--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -85,6 +85,18 @@
   background-color: #ecfeff !important;
 }
 
+/* Hide number input arrows/spinners */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
 /* Custom Animations for Enhanced Theme Toggle */
 @keyframes slideRight {
   0% {
